--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>El pollo loco</title>
     <link rel="stylesheet" href="style.css">
+    <script src="models/drawable-object.class.js"></script>
     <script src="models/movable-object.class.js"></script>
     <script src="models/background-object.class.js"></script>
     <script src="models/character.class.js"></script>
@@ -15,6 +16,7 @@
     <script src="models/coin.class.js"></script>
     <script src="models/bottle-ground.class.js"></script>
     <script src="models/cloud.class.js"></script>
+    <script src="models/status-bar.class.js"></script>
     <script src="models/world.class.js"></script>
     <script src="models/keyboard.class.js"></script>
     <script src="models/level.class.js"></script>
