--- a/index.html
+++ b/index.html
@@ -15,8 +15,11 @@
     <script src="models/small-chicken.class.js"></script>
     <script src="models/coin.class.js"></script>
     <script src="models/bottle-ground.class.js"></script>
+    <script src="models/status-bar-health.class.js"></script>
+    <script src="models/status-bar-coin.class.js"></script>
+    <script src="models/status-bar-bottle.class.js"></script>
+    <script src="models/status-bar-endboss.class.js"></script>
     <script src="models/cloud.class.js"></script>
-    <script src="models/status-bar.class.js"></script>
     <script src="models/world.class.js"></script>
     <script src="models/keyboard.class.js"></script>
     <script src="models/level.class.js"></script>
