--- a/index.html
+++ b/index.html
@@ -41,6 +41,9 @@
     <div id="replay-button-container" class="replay-button-container d-none">
         <button class="replay-button">Replay</button>
     </div>
+    <div id="start-game-container" class="start-game-container d-none">
+        <button onclick="startGame()" class="start-game-button">Start Game</button>
+    </div>
    
 </body>
 
