--- a/index.html
+++ b/index.html
@@ -9,7 +9,6 @@
     <link rel="stylesheet" href="style.css">
     <script src="models/drawable-object.class.js"></script>
     <script src="models/movable-object.class.js"></script>
-    <script src="models/background-object.class.js"></script>
     <script src="models/character.class.js"></script>
     <script src="models/normal-chicken.class.js"></script>
     <script src="models/small-chicken.class.js"></script>
@@ -21,14 +20,13 @@
     <script src="models/status-bar-endboss.class.js"></script>
     <script src="models/cloud.class.js"></script>
     <script src="models/world.class.js"></script>
+    <script src="models/background-object.class.js"></script>
     <script src="models/keyboard.class.js"></script>
-    <script src="models/intervall-ids.class.js"></script>
     <script src="models/level.class.js"></script>
     <script src="models/throwable.object.class.js"></script>
     <script src="models/endboss.class.js"></script>
     <script src="levels/level1.js"></script>
     <script src="models/game-over-screen.class.js"></script>
-    <script src="models/startscreen.class.js"></script>
     <script src="js/game.js"></script>
 </head>
 
@@ -39,10 +37,14 @@
     <div class="canvas-container">
         <canvas id="canvas" width="720" height="480"></canvas>
     </div>
-    <div id="replay-button-container" class="replay-button-container d-none">
-        <button onclick="replayGame()" class="replay-button">Replay</button>
+    <div class="start-screen" id="start-screen">
+        <img src="img/9_intro_outro_screens/start/startscreen_1.png">
     </div>
-    <div id="start-game-container" class="start-game-container d-none">
+    <div class="start-game-container" id="start-game-container">
+        <button onclick="startGame()" class="start-game-button">Start Game</button>
+    </div>
+    <div id="replay-button-container" class="replay-button-container d-none">
+        <button onclick="restartGame()" class="replay-button">Replay</button>
     </div>
    
 </body>
