add touch buttons

--- a/index.html
+++ b/index.html
@@ -46,7 +46,25 @@
     <div id="replay-button-container" class="replay-button-container d-none">
         <button onclick="restartGame()" class="replay-button">Replay</button>
     </div>
-   
+    <div class="touch-icons-main-container">
+        <div class="touch-icon-container">
+            <div>
+                <img id="button-left" src="img/icons/arrow-left.png">
+            </div>
+            <div>
+                <img id="button-right" src="img/icons/arrow-right.png">
+            </div>
+        </div>
+        <div class="touch-icon-container">
+            <div>
+                <img id="button-up" src="img/icons/arrow-up.png">
+            </div>
+            <div>
+                <img id="button-throw" src="img/6_salsa_bottle/salsa_bottle.png">
+            </div>
+        </div>
+    </div>
+
 </body>
 
 </html>
