--- a/index.html
+++ b/index.html
@@ -64,6 +64,12 @@
             </div>
         </div>
     </div>
+    <div id="loading-screen" class="loading-screen-container d-none">
+        <div class="center">
+            <div class="ring"></div>
+            <span>loading...</span>
+        </div>
+    </div>
 
 </body>
 
