--- a/index.html
+++ b/index.html
@@ -26,7 +26,8 @@
     <script src="models/throwable.object.class.js"></script>
     <script src="models/endboss.class.js"></script>
     <script src="levels/level1.js"></script>
-    <script src="models/game-over-screen.class.js"></script>
+    <script src="models/you-lose.class.js"></script>
+    <script src="models/game-over.class.js"></script>
     <script src="js/game.js"></script>
 </head>
 
@@ -34,40 +35,42 @@
 
     <h1>El pollo loco</h1>
 
-    <div class="canvas-container">
-        <canvas id="canvas" width="720" height="480"></canvas>
-    </div>
-    <div class="start-screen" id="start-screen">
-        <img src="img/9_intro_outro_screens/start/startscreen_1.png">
-    </div>
-    <div class="start-game-container" id="start-game-container">
-        <button onclick="startGame()" class="start-game-button">Start Game</button>
-    </div>
-    <div id="replay-button-container" class="replay-button-container d-none">
-        <button onclick="restartGame()" class="replay-button">Replay</button>
-    </div>
-    <div class="touch-icons-main-container">
-        <div class="touch-icon-container">
-            <div>
-                <img id="button-left" src="img/icons/arrow-left.png">
+    <div class="main.container">
+        <div class="canvas-container">
+            <canvas id="canvas" width="720" height="480"></canvas>
+        </div>
+        <div class="start-screen" id="start-screen">
+            <img src="img/9_intro_outro_screens/start/startscreen_1.png">
+        </div>
+        <div class="start-game-container" id="start-game-container">
+            <button onclick="startGame()" class="start-game-button">Start Game</button>
+        </div>
+        <div id="replay-button-container" class="replay-button-container d-none">
+            <button onclick="restartGame()" class="replay-button">Replay</button>
+        </div>
+        <div class="touch-icons-main-container">
+            <div class="touch-icon-container">
+                <div>
+                    <img id="button-left" src="img/icons/arrow-left.png">
+                </div>
+                <div>
+                    <img id="button-right" src="img/icons/arrow-right.png">
+                </div>
             </div>
-            <div>
-                <img id="button-right" src="img/icons/arrow-right.png">
+            <div class="touch-icon-container">
+                <div>
+                    <img id="button-up" src="img/icons/arrow-up.png">
+                </div>
+                <div>
+                    <img id="button-throw" src="img/6_salsa_bottle/salsa_bottle.png">
+                </div>
             </div>
         </div>
-        <div class="touch-icon-container">
-            <div>
-                <img id="button-up" src="img/icons/arrow-up.png">
+        <div id="loading-screen" class="loading-screen-container d-none">
+            <div class="center">
+                <div class="ring"></div>
+                <span>loading...</span>
             </div>
-            <div>
-                <img id="button-throw" src="img/6_salsa_bottle/salsa_bottle.png">
-            </div>
-        </div>
-    </div>
-    <div id="loading-screen" class="loading-screen-container d-none">
-        <div class="center">
-            <div class="ring"></div>
-            <span>loading...</span>
         </div>
     </div>
 
