--- a/index.html
+++ b/index.html
@@ -35,19 +35,8 @@
 
     <h1>El pollo loco</h1>
 
-    <div class="main.container">
-        <div class="canvas-container">
-            <canvas id="canvas" width="720" height="480"></canvas>
-        </div>
-        <div class="start-screen" id="start-screen">
-            <img src="img/9_intro_outro_screens/start/startscreen_1.png">
-        </div>
-        <div class="start-game-container" id="start-game-container">
-            <button onclick="startGame()" class="start-game-button">Start Game</button>
-        </div>
-        <div id="replay-button-container" class="replay-button-container d-none">
-            <button onclick="restartGame()" class="replay-button">Replay</button>
-        </div>
+    <div id="canvas-container" class="canvas-container d-none">
+        <canvas id="canvas" width="720" height="480"></canvas>
         <div class="touch-icons-main-container">
             <div class="touch-icon-container">
                 <div>
@@ -73,6 +62,16 @@
             </div>
         </div>
     </div>
+    <div class="start-screen" id="start-screen">
+        <img src="img/9_intro_outro_screens/start/startscreen_1.png">
+    </div>
+    <div class="start-game-container" id="start-game-container">
+        <button onclick="startGame()" class="start-game-button">Start Game</button>
+    </div>
+    <div id="replay-button-container" class="start-game-container d-none">
+        <button onclick="restartGame()" class="start-game-button">Replay</button>
+    </div>
+
 
 </body>
 
