--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
             </div>
         </div>
         
-        <div class="play-button">
+        <div id="play-button" class="play-button">
             <img onclick="startGame()" src="img/icons/play.png">
         </div>
 
