--- a/index.html
+++ b/index.html
@@ -71,45 +71,45 @@
             </div>
         </div>
         <div class="icons-container">
-            <div id="play-button" class="play-button">
+            <div id="play-button" class="play-button icons">
                 <img onclick="startGame()" src="img/icons/play.png">
             </div>
 
-            <div id="sound-off" onclick="soundOff()" class="sound-on-button d-none">
+            <div id="sound-off" onclick="soundOff()" class="sound-on-button icons d-none">
                 <img src="img/icons/sound-on.png">
             </div>
 
-            <div id="sound-on" onclick="soundOn()" class="sound-off-button d-none">
+            <div id="sound-on" onclick="soundOn()" class="sound-off-button icons d-none">
                 <img src="img/icons/sound-off.png">
             </div>
 
-            <div id="controller-on" onclick="showControllerInfo()" class="controller">
+            <div id="controller-on" onclick="showControllerInfo()" class="controller icons">
                 <img src="img/icons/controller.png">
             </div>
 
-            <div id="controller-off" onclick="closeControllerInfo()" class="controller d-none">
+            <div id="controller-off" onclick="closeControllerInfo()" class="controller icons d-none">
                 <img src="img/icons/controller.png">
             </div>
         </div>
 
         <div id="controller-info" class="controller-info d-none">
-            <div>
+            <div class="icons">
                 <img src="img/icons/phone.png">
                 <img src="img/icons/keyboard.png">
             </div>
-            <div>
+            <div class="icons">
                 <img class="arrow" src="img/icons/arrow-left.png">
                 <img src="img/icons/key-left.png">
             </div>
-            <div>
+            <div class="icons">
                 <img class="arrow" src="img/icons/arrow-right.png">
                 <img src="img/icons/key-right.png">
             </div>
-            <div>
+            <div class="icons">
                 <img class="arrow" src="img/icons/arrow-up.png">
                 <img src="img/icons/key-up.png">
             </div>
-            <div>
+            <div class="icons">
                 <img class="arrow" src="img/6_salsa_bottle/salsa_bottle.png">
                 <img src="img/icons/key-D.png">
             </div>
