--- a/index.html
+++ b/index.html
@@ -84,16 +84,17 @@
                 <img src="img/icons/sound-off.png">
             </div>
 
-            <div id="controller-on" onclick="showControllerInfo()" class="controller icons">
+            <div id="controller-off" onclick="closeControllerInfo()" class="controller icons">
                 <img src="img/icons/controller.png">
             </div>
 
-            <div id="controller-off" onclick="closeControllerInfo()" class="controller icons d-none">
+            <div id="controller-on" onclick="showControllerInfo()" class="controller icons d-none">
                 <img src="img/icons/controller.png">
             </div>
+
         </div>
 
-        <div id="controller-info" class="controller-info d-none">
+        <div id="controller-info" class="controller-info">
             <div class="icons">
                 <img src="img/icons/phone.png">
                 <img src="img/icons/keyboard.png">
